<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_orders"
            android:icon="@mipmap/my_order"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/parking_rent"
            android:icon="@mipmap/parking_rent"
            android:title="@string/parking_rent" />
        <item
            android:id="@+id/system_setting"
            android:icon="@mipmap/settings"
            android:title="@string/setting" />
        <item
            android:id="@+id/version_info"
            android:icon="@mipmap/version_icon"
            android:title="@string/version_info" />
        <item
            android:id="@+id/service_center"
            android:icon="@mipmap/service_center"
            android:title="@string/service_center" />
    </group>

    <item android:title="上面没用，点击下面的试试">
        <menu>
            <item
                android:id="@+id/item_location"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/location"/>
            <item
                android:id="@+id/item_locationBackground"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/locationBackground" />
            <item
                android:id="@+id/item_lastLocation"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/lastLocation" />
            <item
                android:id="@+id/item_jump2Amap"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/jump2Amap" />
            <item
                android:id="@+id/item_login"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/login" />
        </menu>

    </item>

</menu>
